noinst_LTLIBRARIES = libdecoders.la

SUBDIRS = timidity mpglib

INCLUDES = -I$(top_srcdir) -I$(top_srcdir)/decoders/timidity

libdecoders_la_SOURCES =	\
	aiff.c		\
	au.c		\
	mikmod.c	\
	modplug.c	\
	mpglib.c	\
	smpeg.c		\
	ogg.c		\
	raw.c		\
	shn.c		\
	voc.c		\
	midi.c		\
	flac.c		\
	speex.c		\
	wav.c
